--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html {
 body {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: flex-start;
 }
 
 .media {
@@ -83,10 +83,19 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	align-self: flex-start;
 	width :90vw;
 	height: 50vw;
 	margin: 5vw;
 	background-color: rgba(223, 255, 238, 0.4);
+}
+
+.filter {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-content: center;
+	text-align: center;
 }
 
 .login-container {
