--- a/index.css
+++ b/index.css
@@ -18,14 +18,16 @@ body {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
+	height: 75vh;
+	flex-wrap: wrap;
 }
 .main-content {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: space-between;
 	width :60vw;
-	height: 50vw;
-	margin: 3vw;
+	height: 100%;
+
 	background-color: rgba(223, 255, 238, 0.4);
 }
 
@@ -62,22 +64,24 @@ body {
 	display: flex;
 	justify-content: center;
 	height: 2vw;
-	margin-top: 2vw;
+	margin-top: 3vh;
 	margin-right: 5vw;
 	margin-left: 5vw;
-	margin-bottom: 3vw;
+	margin-bottom: 3vh;
 }
 
 .side-bar {
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
 	align-items: center;
 	overflow: auto;
 	overflow-y: scroll;
 	width: 30vw;
-	height: 50vw;
-	margin: 3vw;
+	min-width: 120px;
+	height: 100%;
+
 	background-color: rgba(223, 255, 238, 0.4);
 }
 
@@ -87,7 +91,7 @@ body {
 	justify-content: flex-start;
 	align-self: flex-start;
 	width :90vw;
-	height: 50vw;
+	height: 75vh;
 	margin: 5vw;
 	background-color: rgba(223, 255, 238, 0.4);
 }
@@ -106,7 +110,7 @@ body {
 	justify-content: center;
 	text-align: center;
 	width: 40vw;
-	height: 30vw;
+	height: 100%;
 	margin-right: 25vw;
 	margin-left: 25vw;
 	margin-top: 10vw;
