--- a/nav.css
+++ b/nav.css
@@ -7,7 +7,7 @@
 .nav {
 	display: flex;
 	width: 100%;
-	height: 5vw;
+	height: 60px;
 	background-color: rgba(223, 255, 238, 0.4);
 	align-items: center;
 	align-content: row;
@@ -24,15 +24,15 @@
 .home{
 	display: flex;
 	font-family: cursive;
-	font-size: 2vw;
+	font-size: 30px;
 	font-style: bold;
 	cursor: pointer;
 }
 .gallery{
 	display: flex;
-	font-size: 2vw;
+	font-size: 30px;
 	font-style: bold;
-	padding-left: 0.5vw;
+	padding-left: 15px;
 	cursor: pointer;
 }
 
@@ -40,9 +40,9 @@
 	margin: 0;
 }
 .right form input[type='submit']{
-	height: 2vw;
-	width: 10vw;
+	height: 30px;
+	width: 80px;
 	border:none;
-	margin:2vw;
+	margin: 15px;
 	background-color: white;
 }
