--- a/gallery.css
+++ b/gallery.css
@@ -11,14 +11,15 @@ html {
 body {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: space-between;
+	margin: 0px;
 }
 
 .media {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	height: 65vh;
+	height: 65%;
 }
 .title {
 	display: flex;
@@ -33,24 +34,15 @@ body {
 	opacity: 0.7;
 	filter: alpha(opacity=70);
 }
-.main-content {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	width :60vw;
-	height: 50vw;
-	margin: 3vw;
-	background-color: rgba(223, 255, 238, 0.4);
-}
+
 
 .main {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	align-self: flex-start;
-	width :90vw;
-	margin: 5vw;
+	align-self: center;
 	background-color: rgba(223, 255, 238, 0.4);
+	margin-top: 2vh;
 }
 
 .pagify {
@@ -59,7 +51,7 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	text-align: center;
-	height: 10vh;
+	margin-top: 2vh;
 	background-color: rgba(223, 255, 238, 0.4);
 }
 
@@ -67,6 +59,7 @@ body {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	height: 75%;
 	justify-content: space-around;
 	text-align: center;
 }
