--- a/index.css
+++ b/index.css
@@ -67,6 +67,10 @@ body {
 
 .webcam-action button{
 	height: 30px;
+	border: none;
+	background-color: white;
+	margin-right: 2px;
+	margin-left: 2px;
 }
 
 .side-bar {
