--- a/nav.css
+++ b/nav.css
@@ -1,10 +1,52 @@
 .container {
-	display: flex;
-	align-self: flex-start;
 	width: 100%;
 }
+@media (min-width: 768px) {
+  .navbar {
+    border-radius: 4px;
+  }
+}
+@media (min-width: 768px) {
+  .navbar-header {
+    float: left;
+  }
+}
+.navbar {
+    display: none;
+}
+.container-fluid {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.navbar-default {
+  background-color: #f8f8f8;
+  border-color: #e7e7e7;
+}
 
-.nav {
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+/*.nav {
 	display: flex;
 	width: 100%;
 	height: 60px;
@@ -13,8 +55,8 @@
 	align-content: row;
 	justify-content: space-between;
 
-} 
-.left {
+} */
+/*.left {
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
@@ -27,14 +69,14 @@
 	font-size: 30px;
 	font-style: bold;
 	cursor: pointer;
-}
-.gallery{
+}*/
+/*.gallery{
 	display: flex;
 	font-size: 30px;
 	font-style: bold;
 	padding-left: 15px;
 	cursor: pointer;
-}
+}*/
 
 .right form{
 	margin: 0;
