--- a/gallery.css
+++ b/gallery.css
@@ -1,10 +1,3 @@
-html { 
-  background: url(images/background.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 
 
 
@@ -12,9 +5,15 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	background-color: #fafafa;
 	margin: 0px;
-}
 
+}
+h1 {
+	font-family: sans-serif;
+	font-weight: 1800;
+	color: #337ab7;
+}
 .media {
 	display: flex;
 	flex-direction: row;
@@ -28,7 +27,7 @@ body {
 }
 
 .user_image{
-	box-shadow: 0.5vw 0.5vw 1vw black;
+
 }
 .user_image:hover{
 	opacity: 0.7;
@@ -39,9 +38,8 @@ body {
 .main {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: center;
 	align-self: center;
-	background-color: rgba(223, 255, 238, 0.4);
 	margin-top: 2vh;
 }
 
@@ -52,15 +50,39 @@ body {
 	align-items: center;
 	text-align: center;
 	margin-top: 2vh;
-	background-color: rgba(223, 255, 238, 0.4);
+	/*background-color: rgba(223, 255, 238, 0.4);*/
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	background-color: white;
+	border: 1px solid #ced0d4;
+	margin: 1vw;
+}
+
+.card-title {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.card-like{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 90%;
+	padding: 3vw;
 }
 
 .main-container {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	height: 75%;
-	justify-content: space-around;
+	/*height: 75%;*/
+	justify-content: center;
 	text-align: center;
 }
 
@@ -69,4 +91,82 @@ body {
 	margin-left: 10vw;
 	margin-right: 10vw;
 	cursor: pointer;
+}
+
+.badge {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-color: #777;
+  border-radius: 10px;
+  margin-left: 3px;
+  top: -1px;
+}
+.badge:empty {
+  display: none;
+}
+.btn .badge {
+  position: relative;
+  top: -1px;
+}
+
+a.badge:hover,
+a.badge:focus {
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+h2 {
+	color: #337ab7;
+}
+a {
+	border-radius: 4px;
+	display: flex;
+	font-family: sans-serif;
+	font-weight: 600;
+	color: #337ab7;
+}
+.cmt-btn {
+	color: #fff;
+
+}
+.form-control {
+	display: block;
+	width: 100%;
+	padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #fff;
+    border-top: 1px solid #ced0d4;
+    border-radius: 4px;
+}
+hr {
+	color: #555;
+}
+textarea {
+	overflow: auto;
+	font-family: inherit;
+	margin: 0;
+	user-select: text;
+    flex-direction: column;
+    resize: auto;
+    cursor: auto;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+	text-rendering: auto;
+	letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
 }
