--- a/nav.css
+++ b/nav.css
@@ -46,17 +46,17 @@
     width: 1170px;
   }
 }
-/*.nav {
+.nav {
 	display: flex;
 	width: 100%;
 	height: 60px;
-	background-color: rgba(223, 255, 238, 0.4);
+	background-color: #337ab7;
 	align-items: center;
 	align-content: row;
 	justify-content: space-between;
 
-} */
-/*.left {
+} 
+.left {
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
@@ -69,14 +69,16 @@
 	font-size: 30px;
 	font-style: bold;
 	cursor: pointer;
-}*/
-/*.gallery{
+	color: white;
+}
+.gallery{
 	display: flex;
 	font-size: 30px;
 	font-style: bold;
 	padding-left: 15px;
 	cursor: pointer;
-}*/
+	color: white;
+}
 
 .right form{
 	margin: 0;
