--- a/gallery.css
+++ b/gallery.css
@@ -59,6 +59,7 @@ h1 {
 	justify-content: flex-start;
 	align-items: center;
 	background-color: white;
+	width: 480px;
 	border: 1px solid #ced0d4;
 	margin: 1vw;
 }
@@ -69,18 +70,23 @@ h1 {
 	justify-content: space-between;
 }
 
+.comment-box {
+	display: flex;
+	flex-wrap: wrap;
+	background-color: white;
+	margin: 2px 15px;
+}
 .card-like{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	width: 90%;
-	padding: 3vw;
+	margin-bottom: 10px;
 }
 
 .main-container {
 	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
+	flex-direction: column;
 	/*height: 75%;*/
 	justify-content: center;
 	text-align: center;
@@ -137,6 +143,25 @@ a {
 	color: #fff;
 
 }
+
+.like-comment-form{
+	display: flex;
+	width: 100%;
+	justify-content: space-around;
+}
+
+button {
+	color: #337ab7;
+	background-color: white;
+	box-sizing: content-box;
+	border: none;
+	font-family: sans-serif;
+	font-weight: 600;
+	border-radius: 100px;
+	font-size: 1em;
+	/*height: 20px;
+	width: 40px;*/
+}
 .form-control {
 	display: block;
 	width: 100%;
@@ -169,4 +194,27 @@ textarea {
     text-transform: none;
     text-indent: 0px;
     text-shadow: none;
+    border: 1px;
+}
+.liked-img {
+	display: flex;
+	align-self: flex-start;
+	margin-left: 20px;
+	color: #337ab7;
+}
+strong {
+	color: #337ab7;
+}
+
+em {
+	color: #337ab7
+}
+
+.commentBox {
+	display: flex;
+	margin-top: 2px;
+	margin-bottom: 2px;
+	margin-right: 15px;
+	margin-left: 15px;
+	background-color: white;
 }
